# volante_lokalnie

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LOG.md  PLAN.md  README.md  REFACTOR_FILELIST.txt  TODO.md  llms.txt  pyproject.toml
.cursor/rules/: midjargon.mdc
.github/: copilot-instructions.md
.github/workflows/: push.yml  release.yml
.github/workflows-templates/: README.md  push.yml  release.yml  test-release.yml
.specstory/history/: adding-main-py-for-project-execution.md  comprehensive-readme-md-creation.md  debugging-description-reading-in-python-script.md  python-script-error-mainscreen-attribute-issue.md  running-python-module-volante-lokalnie.md  script-error-offer-refresh-timeout.md  textual-tui-design-for-python-application.md  ui-enhancements-and-auto-save-features.md  ui-layout-issues-and-duplicate-id-errors.md  understanding-footer-and-button-functionality.md
scripts/: build.py  release.sh  verify-setup.py
src/volante_lokalnie/: __init__.py  __main__.py  __version__.py  tui.py  volante_lokalnie.py  volante_lokalnie.tcss
tests/: test_allegro_scraper.py  test_build_integration.py  test_cli.py  test_offer_data.py  test_offer_database.py  test_package.py  test_version.py
