# this_file: pyproject.toml
[project]
name = "volante_lokalnie"
dynamic = ["version"]
description = "A modern Python CLI tool for managing offers on Allegro Lokalnie"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["allegro", "lokalnie", "automation", "cli", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "attrs>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "fire>=0.7.0",
    "h11>=0.14.0",
    "html2text>=2024.2.26",
    "idna>=3.10",
    "markdown-it-py>=3.0.0",
    "packaging>=24.2",
    "psutil>=6.1.1",
    "pydantic>=2.10.6",
    "pygments>=2.19.1",
    "pysocks>=1.7.1",
    "rich>=13.7.0",
    "selenium>=4.0.0",
    "sortedcontainers>=2.4.0",
    "soupsieve>=2.6",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "trio>=0.28.0",
    "trio-websocket>=0.11.1",
]


[project.optional-dependencies]

dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyupgrade>=3.19.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]


all = [
]

[project.scripts]
volante = "volante_lokalnie.__main__:main"



[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"

[project.urls]
Documentation = "https://github.com/twardoch/volante_lokalnie#readme"
Issues = "https://github.com/twardoch/volante_lokalnie/issues"
Source = "https://github.com/twardoch/volante_lokalnie"


[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.21.0", 
    "hatch-vcs>=0.3.0"
]


[tool.coverage.paths]
volante_lokalnie = ["src/volante_lokalnie", "*/volante_lokalnie/src/volante_lokalnie"]
tests = ["tests", "*/volante_lokalnie/tests"]



[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
source_pkgs = ["volante_lokalnie", "tests"]
branch = true
parallel = true
omit = [
    "src/volante_lokalnie/__about__.py",
]



[tool.hatch.build.hooks.vcs]
version-file = "src/volante_lokalnie/__version__.py"


[tool.hatch.build.targets.wheel]
packages = ["src/volante_lokalnie"]



[tool.hatch.envs.default]
dependencies = [
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/volante_lokalnie --cov=tests {args:tests}"
type-check = "mypy src/volante_lokalnie tests"
lint = ["ruff check src/volante_lokalnie tests", "ruff format --respect-gitignore src/volante_lokalnie tests"]
fix = ["ruff check  --fix --unsafe-fixes src/volante_lokalnie tests", "ruff format --respect-gitignore src/volante_lokalnie tests"]



[tool.hatch.envs.lint]
detached = true
dependencies = [
]


[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/volante_lokalnie tests}"
style = ["ruff check {args:.}", "ruff format --respect-gitignore {args:.}"]
fmt = ["ruff format --respect-gitignore {args:.}", "ruff check --fix {args:.}"]
all = ["style", "typing"]


[tool.hatch.envs.test]
dependencies = [
]

[tool.hatch.envs.test.scripts]
test = "python -m pytest -n auto -p no:briefcase {args:tests}"
test-cov = "python -m pytest -n auto -p no:briefcase --cov-report=term-missing --cov-config=pyproject.toml --cov=src/volante_lokalnie --cov=tests {args:tests}"
bench = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only"
bench-save = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only --benchmark-json=benchmark/results.json"

[tool.hatch.version]
source = "vcs"


[tool.hatch.version.raw-options]
version_scheme = "post-release"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true


[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = ["ARG001", "E501", "I001", "RUF001", "PLR2004", "EXE003", "ISC001"]



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]





[tool.pytest.ini_options]
addopts = "-v --durations=10 -p no:briefcase"
asyncio_mode = "auto"
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
log_cli_level = "INFO"
markers = [
  "benchmark: marks tests as benchmarks (select with '-m benchmark')",
  "unit: mark a test as a unit test",
  "integration: mark a test as an integration test",
  "permutation: tests for permutation functionality",
  "parameter: tests for parameter parsing",
  "prompt: tests for prompt parsing",
]
norecursedirs = [
  ".*",
  "build",
  "dist",
  "venv",
  "__pycache__",
  "*.egg-info",
  "_private",
]

python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]


[tool.pytest-benchmark]
min_rounds = 100
min_time = 0.1
histogram = true
storage = "file"
save-data = true
compare = [
    "min",    # Minimum time
    "max",    # Maximum time
    "mean",   # Mean time
    "stddev", # Standard deviation
    "median", # Median time
    "iqr",    # Inter-quartile range
    "ops",    # Operations per second
    "rounds", # Number of rounds
] 
