# this_file: pyproject.toml
[project]
name = "volante_lokalnie"
dynamic = ["version"]
description = "A modern Python CLI tool for managing offers on Allegro Lokalnie"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["allegro", "lokalnie", "automation", "cli", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.4", # Minor update
    "certifi>=2025.6.15", # Minor update
    "charset-normalizer>=3.4.2", # Minor update
    "fire>=0.7.0", # Keeping as is, seems specific
    "h11>=0.16.0", # Minor update
    "html2text>=2025.4.15", # Minor update
    "idna>=3.10", # No change, latest is 3.7 but 3.10 is fine
    "markdown-it-py>=3.0.0", # No change, latest
    "packaging>=25.0", # Minor update
    "psutil>=7.0.0", # Minor update
    "pydantic>=2.8.2", # Updated to latest
    "pygments>=2.19.2", # Minor update
    "pysocks>=1.7.1", # No change, latest
    "rich>=14.0.0", # Minor update
    "selenium>=4.23.0", # Updated to latest
    "sortedcontainers>=2.4.0", # No change, latest
    "soupsieve>=2.7", # Minor update
    "tomli>=2.2.1", # Minor update (for Python < 3.11)
    "tomli-w>=1.2.0", # Minor update
    "trio>=0.30.0", # Minor update
    "trio-websocket>=0.12.2", # Minor update
    "urllib3>=2.0.0", # Added explicitly, compatible with Selenium
]


[project.optional-dependencies]

dev = [
    "pre-commit>=4.2.0", # Minor update
    "ruff>=0.5.5", # Updated to latest
    "mypy>=1.11.0", # Updated to latest
    "pyupgrade>=3.20.0", # Minor update
]

test = [
    "pytest>=8.4.1", # Minor update
    "pytest-cov>=6.2.1", # Minor update
]


all = [ # This can be used to install all optional dependencies
    "volante_lokalnie[dev,test]"
]

[project.scripts]
volante = "volante_lokalnie.__main__:main"



[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"

[project.urls]
Documentation = "https://github.com/twardoch/volante_lokalnie#readme"
Issues = "https://github.com/twardoch/volante_lokalnie/issues"
Source = "https://github.com/twardoch/volante_lokalnie"


[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.21.0", 
    "hatch-vcs>=0.3.0"
]


[tool.coverage.paths]
volante_lokalnie = ["src/volante_lokalnie", "*/volante_lokalnie/src/volante_lokalnie"]
tests = ["tests", "*/volante_lokalnie/tests"]



[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
source_pkgs = ["volante_lokalnie", "tests"]
branch = true
parallel = true
omit = [
    "src/volante_lokalnie/__about__.py",
]



[tool.hatch.build.hooks.vcs]
version-file = "src/volante_lokalnie/__version__.py"


[tool.hatch.build.targets.wheel]
packages = ["src/volante_lokalnie"]



[tool.hatch.envs.default]
dependencies = [
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/volante_lokalnie --cov=tests {args:tests}"
type-check = "mypy src/volante_lokalnie tests"
lint = ["ruff check src/volante_lokalnie tests", "ruff format --respect-gitignore src/volante_lokalnie tests"]
fix = ["ruff check  --fix --unsafe-fixes src/volante_lokalnie tests", "ruff format --respect-gitignore src/volante_lokalnie tests"]



[tool.hatch.envs.lint]
detached = true
dependencies = [
]


[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/volante_lokalnie tests}"
style = ["ruff check {args:.}", "ruff format --respect-gitignore {args:.}"]
fmt = ["ruff format --respect-gitignore {args:.}", "ruff check --fix {args:.}"]
all = ["style", "typing"]


[tool.hatch.envs.test]
dependencies = [
]

[tool.hatch.envs.test.scripts]
test = "python -m pytest -n auto -p no:briefcase {args:tests}"
test-cov = "python -m pytest -n auto -p no:briefcase --cov-report=term-missing --cov-config=pyproject.toml --cov=src/volante_lokalnie --cov=tests {args:tests}"
bench = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only"
bench-save = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only --benchmark-json=benchmark/results.json"

[tool.hatch.version]
source = "vcs"


[tool.hatch.version.raw-options]
version_scheme = "post-release"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true


[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ARG001", # Unused function argument
    "E501",   # Line too long (handled by formatter)
    "I001",   # isort issues (handled by ruff format)
    "RUF001", # String normalization (handled by ruff format)
    "PLR2004",# Magic value used in comparison
    "EXE003", # Shebang is present but file is not executable (might be fine for non-scripts)
    "ISC001", # Implicitly concatenated string on one line (handled by ruff format)
    "S101",   # Use of assert detected (allowed in tests)
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes (random.uniform for human_delay is fine)
    "S603",   # subprocess call: check for execution of untrusted input (CHROME_PATH is a constant)
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "FBT003", # Boolean positional value in function call
    "EM101",  # Exception must not use a string literal (will fix manually where appropriate)
    "DTZ001", # datetime() called without a tzinfo argument (will review)
    "DTZ003", # datetime.utcnow() used (will review)
    "DTZ005", # datetime.now() called without a tz argument (will review)
]

[tool.ruff.lint.per-file-ignores]
# Allow asserts in test files specifically, S101 is already in global ignore for now.
# If S101 is removed from global ignore, this would be:
# "tests/*" = ["S101"]
# For volante_lokalnie.py, can add specific ignores if complexity rules are too strict after review
"src/volante_lokalnie/volante_lokalnie.py" = ["PLR0912", "PLR0915", "C901"] # Allow higher complexity for now
"src/volante_lokalnie/__main__.py" = ["PLC0415"] # Allow import inside try-except for CLI entry


[tool.pytest.ini_options]
addopts = "-v --durations=10 -p no:briefcase"
asyncio_mode = "auto"
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
log_cli_level = "INFO"
markers = [
  "benchmark: marks tests as benchmarks (select with '-m benchmark')",
  "unit: mark a test as a unit test",
  "integration: mark a test as an integration test",
  "permutation: tests for permutation functionality",
  "parameter: tests for parameter parsing",
  "prompt: tests for prompt parsing",
]
norecursedirs = [
  ".*",
  "build",
  "dist",
  "venv",
  "__pycache__",
  "*.egg-info",
  "_private",
]

python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]


[tool.pytest-benchmark]
min_rounds = 100
min_time = 0.1
histogram = true
storage = "file"
save-data = true
compare = [
    "min",    # Minimum time
    "max",    # Maximum time
    "mean",   # Mean time
    "stddev", # Standard deviation
    "median", # Median time
    "iqr",    # Inter-quartile range
    "ops",    # Operations per second
    "rounds", # Number of rounds
] 
